revamp - need more content

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,4 +14,48 @@
     color: #fff;
     font-family: 'Dela Gothic One', cursive;
   }
+
+  .scroll {
+  width: 30px;
+  height: 30px;
+  border: 2px solid #6b7280;
+  border-radius: 50%;
+  position: relative;
+  animation: down 1.5s infinite;
+  -webkit-animation: down 1.5s infinite;
+}
+.scroll::before {
+  content: "";
+  position: absolute;
+  top: 7px;
+  left: 8.25px;
+  width: 9px;
+  height: 9px;
+  border-left: 2px solid #4f46e5;
+  border-bottom: 2px solid #4f46e5;
+  transform: rotate(-45deg);
+}
+
+@keyframes down {
+  0% {
+    transform: translate(0);
+  }
+  20% {
+    transform: translateY(10px);
+  }
+  40% {
+    transform: translate(0);
+  }
+}
+@-webkit-keyframes down {
+  0% {
+    transform: translate(0);
+  }
+  20% {
+    transform: translateY(10px);
+  }
+  40% {
+    transform: translate(0);
+  }
+}
 }
