--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,4 +15,30 @@
     margin: 0 auto;
     border-radius: 8px;
   }
+
+  /* Animations */
+  .floating { 
+    animation-name: floating;
+    animation-duration: 6s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+}
+ 
+@keyframes floating {
+	0% {
+		transform: translate(0%,0%);	
+	}
+	25% {
+		transform: translate(5%,15%);	
+	}	
+	50% {
+		transform: translate(10%,5%);	
+	}	
+	75% {
+		transform: translate(0%,15%);	
+	}	
+	100% {
+		transform: translate(0%,0%);
+	}			
+}
 }
