--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -82,4 +82,29 @@
 		transform: translate(0%,0%);
 	}			
 }
+
+.floating-min { 
+    animation-name: floating-min;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+}
+ 
+@keyframes floating-min {
+	0% {
+		transform: translate(0%,0%);	
+	}
+	25% {
+		transform: translate(1%,3%);	
+	}	
+	50% {
+		transform: translate(2%,1%);	
+	}	
+	75% {
+		transform: translate(0%,3%);	
+	}	
+	100% {
+		transform: translate(0%,0%);
+	}			
+}
 }
